errorprone: <compilerarg value="-J--illegal-access=debug"/>